[package]
name = "market-api-rs"
version = "0.1.0"
authors = ["Didy KUPANHY <d.kupanhy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.0.0"
actix-web = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

futures = "0.3.1"
env_logger = "0.7.1"

atb-db = { path = "../../lib/atb-db" }
read-atb-config = { path = "../../lib/read-atb-config" }
